Changed Main img, added Youtube Player, Added about us block, added map

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Logging in page</title>
+    <title>Pharmaceptic - landing page</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -17,111 +17,158 @@
     <![endif]-->
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">	    
-	<style>
-		.mainJ{
-			background: url(http://www.sunin.com.ua/useruploads/states_images/1_28a93.jpg);
-			background-size: cover;
-			background-position: 0 25%;
-			background-repeat: no-repeat;
-			color: #fff;
-			min-height: 440px;
-			text-shadow: 1px 1px 0 black;
-			font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-			font-size: 2em; 
-		}
-		.parallax-bg{
-			background-image: url(https://template65030.motopreview.com/mt-demo/65000/65030/mt-content/uploads/2017/11/mt-1248-home-parallax1.png);
-			background-color: #09569b;
-			background-attachment: fixed;
-			background-size: cover;
-			background-position:;
-			background-repeat: no-repeat;
-			color: #fff;
-			min-height: 340px;
-		}
-	</style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/pharma.css">
+	
 </head>
 <body>
+	
 	<div class="container">
-		
 	</div>
+
 	<div class="mainJ">
-		<div class="container text-right">
-			<br><br><br>
-			<hr>
-			<h1>Hello, World!</h1>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus magni, voluptatem cum. Dolorem quae porro et possimus perspiciatis. Necessitatibus animi eveniet ex nisi dolor aliquam perferendis quas non illum consectetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore blanditiis, error, magni porro, culpa veniam nostrum, eos accusantium iusto commodi itaque beatae architecto nisi. Similique optio quasi voluptatibus cum deleniti.</p>
-			<hr>
+		<div class="container" style="padding-top:10%">
+			<blockquote class="blockquote-reverse">
+				<h1>Добро пожаловать!</h1>
+				<p class="lead">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового</p>		
+			</blockquote>
 		</div>
 	</div>
+	
 	<br><br>
+	
 	<div class="container">
 		<div class="row">
 			<h2 class="text-center">Нашы достижения!!!</h2>
-			<div class="col-md-4 bg-info" style="margin-top: 1%; padding-top: 2%">
+			<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
 				<div class="text-center">
-					<img src="img/atom.png" class="responsive">
-					<h4>Atoms</h4>
-					<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, sit, eaque? Unde accusamus corporis quaerat sequi commodi consectetur a minima quidem in maxime earum tempora sint vero, quos similique sapiente.</p>
+					<img src="img/atom.png">
+					<h4>Атомы</h4>
+					<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.</p>
 				</div>
 			</div>
-			<div class="col-md-4 bg-warning" style="margin-top: 1%; padding-top: 2%">
+			<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
 				<div class="text-center">
-					<img src="img/dnk.png" class="responsive">
-					<h4>DNA-tests</h4>
-					<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, sit, eaque? Unde accusamus corporis quaerat sequi commodi consectetur a minima quidem in maxime earum tempora sint vero, quos similique sapiente.</p>
+					<img src="img/dnk.png">
+					<h4>ДНК</h4>
+					<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Семантика большого языкового океана. Семантика большого языкового океана.</p>
 				</div>
 			</div>
-			<div class="col-md-4 bg-success" style="margin-top: 1%; padding-top: 2%">
+			<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
 				<div class="text-center">
-					<img src="img/colba.png" class="responsive">
-					<h4>Chimic</h4>
-					<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, sit, eaque? Unde accusamus corporis quaerat sequi commodi consectetur a minima quidem in maxime earum tempora sint vero, quos similique sapiente.</p>
+					<img src="img/colba.png">
+					<h4>Аль-химия</h4>
+					<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Семантика большого языкового океана.</p>
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<br>
+	
 	<div class="container-fluid parallax-bg text-center">
-		<br><br><br>
-		<h1>Hello mFckr</h1>
+		<h1>&raquo; Что - то вроде текста &laquo;</h1>
 	</div>
+
 	<br>
+	
 	<div class="container text-center">
-		<h1>Our personal</h1>
-		<div class="col-md-3 bg-warning">
-			<img src="https://template65030.motopreview.com/mt-demo/65000/65030/mt-content/uploads/2017/11/mt-1248-home-doctors1_1.png" class="">
-			<h3>Dr.Sara Rozario</h3>
-			<code>Cardiolog</code>
-			<p class="text-secondary">Give a brief description of your founders to become closer to your clients.</p>
+		<h1>Наш коллектив</h1>
+		<div class="col-md-3">
+			<img src="img/woman-1.png" class="img">
+			<p style="font-size:1.6em; font-weight: bold">Д-р.Сара Розарио</p>
+			<code>Кардиолог</code>
+			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 		</div>
-		<div class="col-md-3 bg-danger">
-			<img src="https://template65030.motopreview.com/mt-demo/65000/65030/mt-content/uploads/2017/11/mt-1248-home-doctors2.jpg" class="">
-			<h3>Dr.Sara Rozario</h3>
-			<code>Cardiolog</code>
-			<p class="text-secondary">Give a brief description of your founders to become closer to your clients.</p>
+		<div class="col-md-3">
+			<img src="img/man-1.jpg" class="img">
+			<p style="font-size:1.6em; font-weight: bold">Д-р.Джон Сноуден</p>
+			<code>Конь в пальто</code>
+			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 		</div>
-		<div class="col-md-3 bg-info">
-			<img src="https://template65030.motopreview.com/mt-demo/65000/65030/mt-content/uploads/2017/11/mt-1248-home-doctors3_1.png" class="">
-			<h3>Dr.Sara Rozario</h3>
-			<code>Cardiolog</code>
-			<p class="text-secondary">Give a brief description of your founders to become closer to your clients.</p>
+		<div class="col-md-3">
+			<img src="img/woman-2.png" class="img">
+			<p style="font-size:1.6em; font-weight: bold">Д-р.Кончита Вурст</p>
+			<code>Конфетка</code>
+			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 		</div>
-		<div class="col-md-3 bg-success">
-			<img src="https://template65030.motopreview.com/mt-demo/65000/65030/mt-content/uploads/2017/11/mt-1248-home-cv.jpg" height="370" class="responsive">
-			<h3>Dr.Sara Rozario</h3>
-			<code>Cardiolog</code>
-			<p class="text-secondary">Give a brief description of your founders to become closer to your clients.</p>
+		<div class="col-md-3">
+			<img src="img/old-man.jpg" height="370" class="img">
+			<h3>Д-р.Мошонидзе Каваяки</h3>
+			<code>Угадайте</code>
+			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
+		</div>
+	</div>
+	
+	<div class="container-fluid parallax-bg">
+		<div class="container youtube-block" style="padding: 2% 1%">
+			<div class="col-md-8 text-center"><iframe width="80%" height="315" src="https://www.youtube.com/embed/RRvbx_MjNdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+			<div class="col-md-4">
+				<!-- <ul>
+					()
+				</ul> -->
+			</div>
 		</div>
 	</div>
 	<br>
-	<div class="footer bg-primary">
+
+	<div class="footer" style="background: #333; color: #fff">
 		<div class="container" style="min-height: 200px;">
-			<h1>About us!</h1>
+			<div class="row">
+				<h1 class="col-md-6">О нас!</h1>
+				<h1 class="col-md-6 text-right">Контакты</h1>
+			</div>
 			<hr>
+			<div class="row">
+				<div class="col-md-6">
+					<p><b>Мы команда фирмы PharmaUz</b> &mdash; Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.</p>
+				</div>
+
+				<div class="col-md-6 vcard text-right">
+					<div class="company-name">
+						<span class="fn org"><b>PharmaUz</b></span>
+					</div>
+					<div class="adr">
+						Адрес:
+						<span class="postal-code">100015</span>,
+						<span class="country-name">Узбекистан</span>,
+						<span class="locality">г.Ташкент</span>,
+					    <span class="region">Ташкентская обл.</span> 
+						<span class="street-address">45 Aybek Street</span>
+					</div>
+					<div>
+						Телефон: <abbr title="+998 ХХ ХХХ-ХХ-ХХ" class="tel">+998 ХХ ХХХ-ХХ-ХХ</abbr>
+					</div>
+					<div>
+						Факс: <abbr title="+998 ХХ ХХХ-ХХ-ХХ" class="tel">+998 ХХ ХХХ-ХХ-ХХ</abbr>
+					</div>
+		  			Почта:
+		  			<a class="email" href="mailto:Dunel@farma.uz">
+			    		Dunel@farma.uz
+			  		</a>
+				</div>
+			</div>
+			<button class="btn btn-secondary btn-info col-md-2 col-md-offset-5" data-toggle="collapse" data-target="#map">Показать на карте <b class="glyphicon glyphicon-map-marker"></b></button>
+			<br>
+		</div>
+		<div class="col-md-12 collapse" id="map">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11990.010517769995!2d69.2756049!3d41.297928!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x704512af6459eda3!2z0KLQsNGI0LrQtdC90YLRgdC60LjQuSDRhNCw0YDQvNCw0YbQtdCy0YLQuNGH0LXRgdC60LjQuSDQuNC90YHRgtC40YLRg9GC!5e0!3m2!1sru!2s!4v1526243598466" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
+		<div class="col-md-12" style="background: #111">
+			<div class="col-md-5 col-md-offset-3" style="margin-top:1%;">2018 © <b class="text-primary">Pharma.Uz</b> | All rights reserved. | Privacy Policy | Designed by <b class="text-primary">eDuny.uz</b></div>
+			<div class="col-md-3 col-md-offset-1">
+				<div class="social">
+					<span class="social-t"></span>
+					<span class="social-f"></span>
+					<span class="social-b"></span>
+					<span class="social-c"></span>
+					<span class="social-i"></span>
+					<span class="social-g"></span>
+				</div>
+			</div>
 		</div>
 	</div>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" href="jscript.js"></script>
