--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
 
 	<div class="mainJ">
 		<div class="container" style="padding-top:10%">
-			<blockquote class="blockquote-reverse">
-				<h1>Добро пожаловать!</h1>
+			<div class="col-md-7">
+			<blockquote class="blockquote">
+				<h1 style="font-size: 3em">Добро пожаловать!</h1>
 				<p class="lead">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового</p>		
 			</blockquote>
+			</div>
 		</div>
 	</div>
 	
 	<br><br>
 	
 	<div class="container">
-		<div class="row">
 			<h2 class="text-center">Нашы достижения!!!</h2>
 			<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
 				<div class="text-center">
@@ -61,7 +62,6 @@
 					<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Семантика большого языкового океана.</p>
 				</div>
 			</div>
-		</div>
 	</div>
 
 	<br>
@@ -101,32 +101,52 @@
 	</div>
 	
 	<div class="container-fluid parallax-bg">
-		<div class="container youtube-block" style="padding: 2% 1%">
-			<div class="col-md-8 text-center"><iframe width="80%" height="315" src="https://www.youtube.com/embed/RRvbx_MjNdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-			<div class="col-md-4">
-				<!-- <ul>
-					()
-				</ul> -->
+		<div class="container" style="padding: 2% 1%">
+			<div class="col-md-8 text-center">
+				<iframe class="youtube-block" width="100%" height="500" src="https://www.youtube.com/embed/RRvbx_MjNdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-4 text-center bg-info" style="color: #3a3a3a;">
+			    <ul class="thumbnails vList">
+					<li class="span2">
+						<div class="thumbnail">
+							<img data-src="img/media-bg.png" alt="160x100" style="width: 160px; height: 100px;" src="img/player-bg.png">
+							<h4>Some Video - some text</h4>
+						</div>
+					</li>
+					<li class="span3">
+						<div class="thumbnail">
+							<img data-src="img/media-bg.png" alt="160x100" style="width: 160px; height: 100px;" src="img/player-bg.png">
+							<h4>Some Video - some text</h4>
+						</div>
+					</li>
+					<li class="span4">
+						<div class="thumbnail">
+							<img data-src="img/media-bg.png" alt="160x100" style="width: 160px; height: 100px;" src="img/player-bg.png">
+							<h4>Some Video - some text</h4>
+						</div>
+					</li>
+			    </ul>
 			</div>
 		</div>
 	</div>
 	<br>
 
 	<div class="footer" style="background: #333; color: #fff">
+		
 		<div class="container" style="min-height: 200px;">
 			<div class="row">
-				<h1 class="col-md-6">О нас!</h1>
-				<h1 class="col-md-6 text-right">Контакты</h1>
+				<h1 class="col-md-6 col-sm-6">О нас!</h1>
+				<h1 class="col-md-6 text-right col-sm-6">Контакты</h1>
 			</div>
 			<hr>
 			<div class="row">
 				<div class="col-md-6">
-					<p><b>Мы команда фирмы PharmaUz</b> &mdash; Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.</p>
+					<p><b>Мы команда фирмы VellPharm</b> &mdash; Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.</p>
 				</div>
 
 				<div class="col-md-6 vcard text-right">
 					<div class="company-name">
-						<span class="fn org"><b>PharmaUz</b></span>
+						<span class="fn org"><b>VellPharm</b></span>
 					</div>
 					<div class="adr">
 						Адрес:
@@ -151,12 +171,15 @@
 			<button class="btn btn-secondary btn-info col-md-2 col-md-offset-5" data-toggle="collapse" data-target="#map">Показать на карте <b class="glyphicon glyphicon-map-marker"></b></button>
 			<br>
 		</div>
+		
 		<div class="col-md-12 collapse" id="map">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11990.010517769995!2d69.2756049!3d41.297928!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x704512af6459eda3!2z0KLQsNGI0LrQtdC90YLRgdC60LjQuSDRhNCw0YDQvNCw0YbQtdCy0YLQuNGH0LXRgdC60LjQuSDQuNC90YHRgtC40YLRg9GC!5e0!3m2!1sru!2s!4v1526243598466" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
-		<div class="col-md-12" style="background: #111">
-			<div class="col-md-5 col-md-offset-3" style="margin-top:1%;">2018 © <b class="text-primary">Pharma.Uz</b> | All rights reserved. | Privacy Policy | Designed by <b class="text-primary">eDuny.uz</b></div>
-			<div class="col-md-3 col-md-offset-1">
+
+		<div class="col-md-12" style="background: #111;">
+			
+			<div class="col-md-5 col-md-offset-3 col-sm-5  col-sm-offset-3 col-xs-5" style="margin-top:1%;">2018 © <b class="text-primary">Pharma.Uz</b> | All rights reserved. | Privacy Policy | Designed by <b class="text-primary">eDuny.uz</b></div>
+			<div class="col-md-3 col-md-offset-1 col-sm-3  col-sm-offset-1 col-xs-3">
 				<div class="social">
 					<span class="social-t"></span>
 					<span class="social-f"></span>
@@ -166,7 +189,9 @@
 					<span class="social-g"></span>
 				</div>
 			</div>
+
 		</div>
+
 	</div>
 
     <script src="js/jquery.min.js"></script>
