--- a/index.html
+++ b/index.html
@@ -103,27 +103,21 @@
 	<div class="container-fluid parallax-bg">
 		<div class="container" style="padding: 2% 1%">
 			<div class="col-md-8 text-center">
-				<iframe class="youtube-block" width="100%" height="500" src="https://www.youtube.com/embed/RRvbx_MjNdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<iframe class="youtube-block" width="100%" height="430" src="https://www.youtube.com/embed/RRvbx_MjNdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
-			<div class="col-md-4 text-center bg-info" style="color: #3a3a3a;">
-			    <ul class="thumbnails vList">
-					<li class="span2">
-						<div class="thumbnail">
-							<img data-src="img/media-bg.png" alt="160x100" style="width: 160px; height: 100px;" src="img/player-bg.png">
-							<h4>Some Video - some text</h4>
-						</div>
+			<div class="col-md-4 text-center vList">
+			    <ul>
+					<li>
+						<img alt="160x100" src="img/player-bg.png">
+						<h4>Some Video - somesomesome text</h4>
 					</li>
-					<li class="span3">
-						<div class="thumbnail">
-							<img data-src="img/media-bg.png" alt="160x100" style="width: 160px; height: 100px;" src="img/player-bg.png">
-							<h4>Some Video - some text</h4>
-						</div>
+					<li>
+						<img alt="160x100" src="img/player-bg.png">
+						<h4>Some Video - some text</h4>
 					</li>
-					<li class="span4">
-						<div class="thumbnail">
-							<img data-src="img/media-bg.png" alt="160x100" style="width: 160px; height: 100px;" src="img/player-bg.png">
-							<h4>Some Video - some text</h4>
-						</div>
+					<li>
+						<img alt="160x100" src="img/player-bg.png">
+						<h4>Some Video - some text</h4>
 					</li>
 			    </ul>
 			</div>
@@ -168,11 +162,10 @@
 			  		</a>
 				</div>
 			</div>
-			<button class="btn btn-secondary btn-info col-md-2 col-md-offset-5" data-toggle="collapse" data-target="#map">Показать на карте <b class="glyphicon glyphicon-map-marker"></b></button>
-			<br>
+			<button class="btn btn-me col-md-2 col-md-offset-5" data-toggle="collapse" data-target="#map">Показать на карте <b class="glyphicon glyphicon-map-marker"></b></button>
 		</div>
 		
-		<div class="col-md-12 collapse" id="map">
+		<div class="collapse" id="map">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11990.010517769995!2d69.2756049!3d41.297928!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x704512af6459eda3!2z0KLQsNGI0LrQtdC90YLRgdC60LjQuSDRhNCw0YDQvNCw0YbQtdCy0YLQuNGH0LXRgdC60LjQuSDQuNC90YHRgtC40YLRg9GC!5e0!3m2!1sru!2s!4v1526243598466" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 
