--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 </head>
 <body>
 	
-	<div class="container">
-	</div>
-
+	<!-- <div class="container"></div> -->
 	<div class="mainJ">
 		<div class="container" style="padding-top:10%">
 			<div class="col-md-7">
@@ -36,74 +34,115 @@
 			</div>
 		</div>
 	</div>
-	
-	<br><br>
-	
 	<div class="container">
-			<h2 class="text-center">Нашы достижения!!!</h2>
-			<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
-				<div class="text-center">
-					<img src="img/atom.png">
-					<h4>Атомы</h4>
-					<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.</p>
-				</div>
+		<h2 class="text-center">Нашы достижения!!!</h2>
+		<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
+			<div class="text-center">
+				<img src="img/atom.png">
+				<h4>Атомы</h4>
+				<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.</p>
 			</div>
-			<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
-				<div class="text-center">
-					<img src="img/dnk.png">
-					<h4>ДНК</h4>
-					<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Семантика большого языкового океана. Семантика большого языкового океана.</p>
-				</div>
+		</div>
+		<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
+			<div class="text-center">
+				<img src="img/dnk.png">
+				<h4>ДНК</h4>
+				<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Семантика большого языкового океана. Семантика большого языкового океана.</p>
 			</div>
-			<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
-				<div class="text-center">
-					<img src="img/colba.png">
-					<h4>Аль-химия</h4>
-					<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Семантика большого языкового океана.</p>
-				</div>
+		</div>
+		<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
+			<div class="text-center">
+				<img src="img/colba.png">
+				<h4>Аль-химия</h4>
+				<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Семантика большого языкового океана.</p>
 			</div>
+		</div>
 	</div>
-
-	<br>
 	
 	<div class="container-fluid parallax-bg text-center">
-		<h1>&raquo; Что - то вроде текста &laquo;</h1>
+		<h1>&raquo; Нашы лучшие подукты &laquo;</h1>
+		<div class="container">
+			<div class="col-md-12">
+				<div class="col-md-4">
+					<div class="pCards">
+						<div class="pCardT">
+							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="pCards">
+						<div class="pCardT">
+							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="pCards">
+						<div class="pCardT">
+							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12">
+				<div class="col-md-4">
+					<div class="pCards">
+						<div class="pCardT">
+							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="pCards">
+						<div class="pCardT">
+							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="pCards">
+						<div class="pCardT">
+							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
-	<br>
-	
 	<div class="container text-center">
 		<h1>Наш коллектив</h1>
 		<div class="col-md-3">
-			<img src="img/woman-1.png" class="img">
-			<p style="font-size:1.6em; font-weight: bold">Д-р.Сара Розарио</p>
+			<img src="img/woman-11.png" class="img-responsive">
+			<p style="font-size:1.6em;">Д-р.Сара Розарио</p>
 			<code>Кардиолог</code>
 			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 		</div>
 		<div class="col-md-3">
-			<img src="img/man-1.jpg" class="img">
-			<p style="font-size:1.6em; font-weight: bold">Д-р.Джон Сноуден</p>
+			<img src="img/man-11.jpg" class="img-responsive">
+			<p style="font-size:1.6em;">Д-р.Джон Сноуден</p>
 			<code>Конь в пальто</code>
 			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 		</div>
 		<div class="col-md-3">
-			<img src="img/woman-2.png" class="img">
-			<p style="font-size:1.6em; font-weight: bold">Д-р.Кончита Вурст</p>
-			<code>Конфетка</code>
+			<img src="img/woman-21.png" class="img-responsive">
+			<p style="font-size:1.6em;">Д-р.Маппи Джинни</p>
+			<code>Просто так</code>
 			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 		</div>
 		<div class="col-md-3">
-			<img src="img/old-man.jpg" height="370" class="img">
-			<h3>Д-р.Мошонидзе Каваяки</h3>
+			<img src="img/old-man1.jpg" class="img-responsive">
+			<p style="font-size: 1.6em;">Д-р.Мошонидзе Каваяки</p style="font-size: 1.6em;">
 			<code>Угадайте</code>
 			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 		</div>
 	</div>
-	
+
 	<div class="container-fluid parallax-bg">
 		<div class="container" style="padding: 2% 1%">
-			<div class="col-md-8 text-center">
-				<iframe class="youtube-block" width="100%" height="430" src="https://www.youtube.com/embed/RRvbx_MjNdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<div class="col-md-8 text-center ">
+				<iframe class="youtube-block spec" width="100%" height="430" src="https://www.youtube.com/embed/RRvbx_MjNdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 			<div class="col-md-4 text-center vList">
 			    <ul>
@@ -123,17 +162,15 @@
 			</div>
 		</div>
 	</div>
-	<br>
 
-	<div class="footer" style="background: #333; color: #fff">
-		
-		<div class="container" style="min-height: 200px;">
-			<div class="row">
+	<div class="col-md-12" style="background: #333; color: #fff; min-height: 200px;">
+		<div class="container">
+			<div class="col-md-12">
 				<h1 class="col-md-6 col-sm-6">О нас!</h1>
 				<h1 class="col-md-6 text-right col-sm-6">Контакты</h1>
 			</div>
 			<hr>
-			<div class="row">
+			<div class="col-md-12">
 				<div class="col-md-6">
 					<p><b>Мы команда фирмы VellPharm</b> &mdash; Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.</p>
 				</div>
@@ -162,17 +199,16 @@
 			  		</a>
 				</div>
 			</div>
-			<button class="btn btn-me col-md-2 col-md-offset-5" data-toggle="collapse" data-target="#map">Показать на карте <b class="glyphicon glyphicon-map-marker"></b></button>
+			<button class="btn-me" data-toggle="collapse" data-target="#map">Показать на карте <b class="glyphicon glyphicon-map-marker"></b></button>
 		</div>
 		
 		<div class="collapse" id="map">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11990.010517769995!2d69.2756049!3d41.297928!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x704512af6459eda3!2z0KLQsNGI0LrQtdC90YLRgdC60LjQuSDRhNCw0YDQvNCw0YbQtdCy0YLQuNGH0LXRgdC60LjQuSDQuNC90YHRgtC40YLRg9GC!5e0!3m2!1sru!2s!4v1526243598466" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 
-		<div class="col-md-12" style="background: #111;">
-			
-			<div class="col-md-5 col-md-offset-3 col-sm-5  col-sm-offset-3 col-xs-5" style="margin-top:1%;">2018 © <b class="text-primary">Pharma.Uz</b> | All rights reserved. | Privacy Policy | Designed by <b class="text-primary">eDuny.uz</b></div>
-			<div class="col-md-3 col-md-offset-1 col-sm-3  col-sm-offset-1 col-xs-3">
+		<div class="container-fluid" style="; padding: 0 !important;">
+			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6" style="margin-top:1%;">2018 © <b class="text-primary">VellPharm.uz</b> | All rights reserved. | Privacy Policy | Designed by team<b class="text-primary"> eDuny.uz</b></div>
+			<div class="col-md-3 col-sm-3 col-xs-3">
 				<div class="social">
 					<span class="social-t"></span>
 					<span class="social-f"></span>
@@ -182,7 +218,6 @@
 					<span class="social-g"></span>
 				</div>
 			</div>
-
 		</div>
 
 	</div>
