--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
 		<div class="container">
 			<div class="col-md-12">
 				<div class="col-md-4">
-					<div class="pCards">
+					<div class="pCards pBg-1">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="pCards">
+					<div class="pCards pBg-2">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="pCards">
+					<div class="pCards pBg-3">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
@@ -87,21 +87,21 @@
 			</div>
 			<div class="col-md-12">
 				<div class="col-md-4">
-					<div class="pCards">
+					<div class="pCards pBg-4">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="pCards">
+					<div class="pCards pBg-5">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="pCards">
+					<div class="pCards pBg-6">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
@@ -206,7 +206,7 @@
 			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11990.010517769995!2d69.2756049!3d41.297928!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x704512af6459eda3!2z0KLQsNGI0LrQtdC90YLRgdC60LjQuSDRhNCw0YDQvNCw0YbQtdCy0YLQuNGH0LXRgdC60LjQuSDQuNC90YHRgtC40YLRg9GC!5e0!3m2!1sru!2s!4v1526243598466" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 
-		<div class="container-fluid" style="; padding: 0 !important;">
+		<div class="container-fluid" style="padding: 0 !important;">
 			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6" style="margin-top:1%;">2018 © <b class="text-primary">VellPharm.uz</b> | All rights reserved. | Privacy Policy | Designed by team<b class="text-primary"> eDuny.uz</b></div>
 			<div class="col-md-3 col-sm-3 col-xs-3">
 				<div class="social">
