Big Changes, +AOS Js lib, MAin Js block, some fixes and responsibilities

--- a/ex.html
+++ b/ex.html
@@ -146,19 +146,19 @@
 	<hr>
 	<div class="container">	
 		<div class="jumbotron" style="background: url(img/jumbotron-bg.png); color: #fff; text-shadow: 0 0 10px #fff; ">
-			<ul class="nav nav-tabs">
+			<ul class="nav nav-pills nav-stacked">
 				<li>
-					<a href="#try-me-1" data-toggle="tab">Try me-1</a>
+					<a href="#try-me-1" data-toggle="pill">Try me-1</a>
 				</li>
 				<li class="active">
-					<a href="#try-me-2" data-toggle="tab">Try me-2</a>
+					<a href="#try-me-2" data-toggle="pill">Try me-2</a>
 				</li>
 				<li>
-					<a href="#try-me-3" data-toggle="tab">Try me-3</a>
+					<a href="#try-me-3" data-toggle="pill">Try me-3</a>
 				</li>
-			</ul>
+			</ul>		
 			<div class="tab-content jumbotron" style="background: rgba(255,255,255,0.5); border-radius: 0 0 10px 10px;">
-				<div class="tab-pane fade collapse" id="try-me-1">
+				<div class="tab-pane fade" id="try-me-1">
 					<h3>Try me - 1</h3>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum quis porro fugiat perspiciatis, magni voluptates architecto odit facere at, vero explicabo veritatis earum. Quam voluptas odit fugit, architecto voluptatibus ipsum.
