--- a/index.html
+++ b/index.html
@@ -17,90 +17,98 @@
     <![endif]-->
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/pharma.css">
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css">
 	
 </head>
 <body>
 	
 	<!-- <div class="container"></div> -->
-	<div class="mainJ">
-		<div class="container" style="padding-top:10%">
-			<div class="col-md-7">
-			<blockquote class="blockquote">
-				<h1 style="font-size: 3em">Добро пожаловать!</h1>
-				<p class="lead">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового</p>		
-			</blockquote>
-			</div>
-		</div>
-	</div>
-	<div class="container">
-		<h2 class="text-center">Нашы достижения!!!</h2>
-		<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
-			<div class="text-center">
-				<img src="img/atom.png">
-				<h4>Атомы</h4>
-				<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.</p>
-			</div>
-		</div>
-		<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
-			<div class="text-center">
-				<img src="img/dnk.png">
-				<h4>ДНК</h4>
-				<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Семантика большого языкового океана. Семантика большого языкового океана.</p>
-			</div>
-		</div>
-		<div class="col-md-4" style="margin-top: 1%; padding-top: 2%">
-			<div class="text-center">
-				<img src="img/colba.png">
-				<h4>Аль-химия</h4>
-				<p class="text-center">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Семантика большого языкового океана.</p>
-			</div>
-		</div>
-	</div>
-	
-	<div class="container-fluid parallax-bg text-center">
-		<h1>&raquo; Нашы лучшие подукты &laquo;</h1>
+
+	<div class="mainJ" data-aos="zoom-out-down" data-aos-anchor-placement="top-top" data-aos-duration="1000" data-aos-delay="500" data-aos-once=true>
 		<div class="container">
+			<div class="col-md-8" style="padding-top: 13%; margin-left: -5%" data-aos="fade-right" data-aos-anchor-placement="top-top" data-aos-delay="1500" data-aos-once=true>
+				<blockquote class="blockquote" style="background: rgba(0,0,0,0.4); ">
+					<h1 style="font-size: 3em">Добро пожаловать!</h1>
+					<p class="lead">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового</p>		
+				</blockquote>
+			</div>
+			<!-- <div class="col-md-8 col-md-offset-2 bBlock">
+				<button class="btns btn-tm" onclick="location.href='#products'" id="tm">Продукты <b class="glyphicon glyphicon-qrcode"></b></button>
+				<button class="btns btn-tm" onclick="location.href='#about'" id="tm1">О нас <b class="glyphicon glyphicon-fire"></b></button>
+				<button class="btns btn-tm" onclick="location.href='#personal'" id="tm2">Коллектив <b class="glyphicon glyphicon-user"></b></button>
+			</div> -->
+		</div>
+	</div>
+
+	<section class="container-fluid">
+		<div class="container">
+			<h1 class="text-center">Наши достижения!!!</h1>
+			<div class="col-md-4" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="100" data-aos-once=true>
+				<div class="text-center">
+					<img src="img/atom.png" class="icon-b">
+					<h4>Атомы</h4>
+					<p >Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана.</p>
+				</div>
+			</div>
+			<div class="col-md-4" data-aos="fade-down" data-aos-anchor-placement="top-center" data-aos-delay="200" data-aos-once=true>
+				<div class="text-center">
+					<img src="img/dnk.png" class="icon-b">
+					<h4>ДНК</h4>
+					<p >Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они языкового океана может и быть такое разве это не прелесть, зыкового океана.</p>
+				</div>
+			</div>
+			<div class="col-md-4" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="300" data-aos-once=true>
+				<div class="text-center">
+					<img src="img/colba.png" class="icon-b">
+					<h4>Аль-химия</h4>
+					<p >Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Семантика большого языкового океана.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="container-fluid parallax-bg text-center">
+		<div class="container">
+			<h1>Наши лучшие подукты</h1>
 			<div class="col-md-12">
-				<div class="col-md-4">
+				<div class="col-md-4" data-aos="fade-down" data-aos-anchor-placement="top-center" data-aos-delay="100" data-aos-once=true>
 					<div class="pCards pBg-1">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4" data-aos="fade-down" data-aos-anchor-placement="top-center" data-aos-delay="200" data-aos-once=true>
 					<div class="pCards pBg-2">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4" data-aos="fade-down" data-aos-anchor-placement="top-center" data-aos-delay="300" data-aos-once=true>
 					<div class="pCards pBg-3">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-md-12">
-				<div class="col-md-4">
+				<div class="col-md-4" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100" data-aos-once=true>
 					<div class="pCards pBg-4">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="200" data-aos-once=true>
 					<div class="pCards pBg-5">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="300" data-aos-once=true>
 					<div class="pCards pBg-6">
 						<div class="pCardT">
 							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
@@ -109,42 +117,44 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 
-	<div class="container text-center">
-		<h1>Наш коллектив</h1>
-		<div class="col-md-3">
-			<img src="img/woman-11.png" class="img-responsive">
-			<p style="font-size:1.6em;">Д-р.Сара Розарио</p>
-			<code>Кардиолог</code>
-			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
+	<section class="container-fluid" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-once=true>	
+		<div class="container text-center" id="personal">
+			<h1>Наш коллектив</h1>
+			<div class="col-md-3">
+				<img src="img/woman-11.png" class="img-responsive">
+				<p style="font-size: 1.6em;">Д-р.Сара Розарио</p>
+				<code>Кардиолог</code>
+				<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
+			</div>
+			<div class="col-md-3">
+				<img src="img/man-11.jpg" class="img-responsive">
+				<p style="font-size: 1.6em;">Д-р.Джон Сноуден</p>
+				<code>Конь в пальто</code>
+				<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
+			</div>
+			<div class="col-md-3">
+				<img src="img/woman-21.png" class="img-responsive">
+				<p style="font-size: 1.6em;">Д-р.Маппи Джинни</p>
+				<code>Просто так</code>
+				<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
+			</div>
+			<div class="col-md-3">
+				<img src="img/old-man1.jpg" class="img-responsive">
+				<p style="font-size: 1.6em;">Д-р.Мошонидзе Каваяки</p>
+				<code>Угадайте</code>
+				<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
+			</div>
 		</div>
-		<div class="col-md-3">
-			<img src="img/man-11.jpg" class="img-responsive">
-			<p style="font-size:1.6em;">Д-р.Джон Сноуден</p>
-			<code>Конь в пальто</code>
-			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
-		</div>
-		<div class="col-md-3">
-			<img src="img/woman-21.png" class="img-responsive">
-			<p style="font-size:1.6em;">Д-р.Маппи Джинни</p>
-			<code>Просто так</code>
-			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
-		</div>
-		<div class="col-md-3">
-			<img src="img/old-man1.jpg" class="img-responsive">
-			<p style="font-size: 1.6em;">Д-р.Мошонидзе Каваяки</p style="font-size: 1.6em;">
-			<code>Угадайте</code>
-			<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
-		</div>
-	</div>
+	</section>
 
-	<div class="container-fluid parallax-bg">
+	<section class="container-fluid parallax-bg" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-once=true>
 		<div class="container" style="padding: 2% 1%">
-			<div class="col-md-8 text-center ">
+			<div class="col-md-8 text-center">
 				<iframe class="youtube-block spec" width="100%" height="430" src="https://www.youtube.com/embed/RRvbx_MjNdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
-			<div class="col-md-4 text-center vList">
+			<div class="col-md-4 text-center vList" style="overflow: auto; height: 430px;">
 			    <ul>
 					<li>
 						<img alt="160x100" src="img/player-bg.png">
@@ -158,24 +168,29 @@
 						<img alt="160x100" src="img/player-bg.png">
 						<h4>Some Video - some text</h4>
 					</li>
+					<li>
+						<img alt="160x100" src="img/player-bg.png">
+						<h4>Some Video - some text</h4>
+					</li>
+					<li>
+						<img alt="160x100" src="img/player-bg.png">
+						<h4>Some Video - some text</h4>
+					</li>
 			    </ul>
 			</div>
 		</div>
-	</div>
-
-	<div class="col-md-12" style="background: #333; color: #fff; min-height: 200px;">
+	</section>
+<!-- ===================================FOOTER============================================== -->
+	<section class="col-md-12" style="background: #333; color: #fff; min-height: 200px;" id="about"  data-aos="flip-up" data-aos-anchor-placement="center-bottom" data-aos-once=true>
 		<div class="container">
-			<div class="col-md-12">
-				<h1 class="col-md-6 col-sm-6">О нас!</h1>
-				<h1 class="col-md-6 text-right col-sm-6">Контакты</h1>
-			</div>
-			<hr>
-			<div class="col-md-12">
-				<div class="col-md-6">
-					<p><b>Мы команда фирмы VellPharm</b> &mdash; Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.</p>
-				</div>
 
-				<div class="col-md-6 vcard text-right">
+			<div class="col-md-6" >
+				<h3 style="font-size: 2em;">О нас!</h3>
+				<p><b>Мы команда фирмы VellPharm</b> &mdash; Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.</p>
+			</div>
+			<div class="col-md-6" >
+				<h3 style="font-size: 2em;" class="text-right">Контакты</h3>
+				<div class="vcard text-right">
 					<div class="company-name">
 						<span class="fn org"><b>VellPharm</b></span>
 					</div>
@@ -199,7 +214,9 @@
 			  		</a>
 				</div>
 			</div>
-			<button class="btn-me" data-toggle="collapse" data-target="#map">Показать на карте <b class="glyphicon glyphicon-map-marker"></b></button>
+			<div class="col-md-4 col-md-offset-4 text-center">
+					<button class="btn-m btns" data-toggle="collapse" data-target="#map">Показать на карте <b class="glyphicon glyphicon-map-marker"></b></button>
+			</div>
 		</div>
 		
 		<div class="collapse" id="map">
@@ -207,7 +224,7 @@
 		</div>
 
 		<div class="container-fluid" style="padding: 0 !important;">
-			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6" style="margin-top:1%;">2018 © <b class="text-primary">VellPharm.uz</b> | All rights reserved. | Privacy Policy | Designed by team<b class="text-primary"> eDuny.uz</b></div>
+			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6" style="margin-top:1%;">2018 © <b class="text-primary">VellPharm.uz</b> | All rights reserved. | Privacy Policy | Designed by team<b class="text-primary"> eDunyo.uz</b></div>
 			<div class="col-md-3 col-sm-3 col-xs-3">
 				<div class="social">
 					<span class="social-t"></span>
@@ -220,10 +237,11 @@
 			</div>
 		</div>
 
-	</div>
+	</section>
 
     <script src="js/jquery.min.js"></script>
+    <script src="bower_components/aos/dist/aos.js"></script>
+	<script src="js/pharma.js"></script> <!-- Own jScript - MainJ FullScreen display -->
     <script src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" href="jscript.js"></script>
 </body>
 </html>
